...
                borderRadius: BorderRadius.circular(borderRadius),
              ),
              backgroundColor: AppTheme.lightPrimary,
              elevation: 2,
            ),
            child: Text(
              'Sign Up',
              style: TextStyle(
                fontSize: ScreenUtils.getFontSize(context, 16),
                fontWeight: FontWeight.bold,
                color: Colors.white,
              ),
            ),
...
              shape: RoundedRectangleBorder(
                borderRadius: BorderRadius.circular(borderRadius),
              ),
              side: const BorderSide(color: AppTheme.lightPrimary, width: 2),
            ),
            child: Text(
              'Login',
              style: TextStyle(
                fontSize: ScreenUtils.getFontSize(context, 16),
                fontWeight: FontWeight.bold,
                color: AppTheme.lightPrimary,
              ),
            ),
...
